<resources>
    
    <!-- app start -->
    <string name="app_name" translatable="false">Wifi Password</string>
    <string name="app_version">Version %s</string>
    <string name="app_icon_description">Application icon</string>
    <!-- app end -->
    
    <!-- action start -->
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_copy">Copy password</string>
    <string name="action_info">Information</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_rate">Rate</string>
    <string name="action_share">Share</string>
    <string name="action_code">Generate QR Code</string>
    <string name="action_save">Save</string>
    <!-- action end -->
    
    <!-- array start -->
    <string name="array_back_dialog">Alert Dialog</string>
    <string name="array_back_press">Press twice</string>
    <string name="array_theme_light">Light</string>
    <string name="array_theme_dark">Dark</string>
    <string name="array_theme_system">System theme</string>
    <string name="array_theme_battery">Battery saver</string>
    <!-- array end -->
    
    <!--description start-->
    <string name="description_user">User: %s</string>
    <string name="description_key_index">Key index: %s</string>
    <string name="description_github">Open github</string>
    <string name="description_telegram">Open telegram</string>
    <string name="description_code">QR Code</string>
    <string name="description_ssid">Network name</string>
    <string name="description_password">Network password</string>
    <string name="description_copy_all">Copy all</string>
    <string name="description_copy_ssid">Copy network name</string>
    <string name="description_copy_password">Copy network password</string>
    <!--description end-->
    
    <!-- dialog start -->
    <string name="dialog_exit_title">Exit</string>
    <string name="dialog_exit_message">Are you sure you want to exit?</string>
    <!-- dialog end -->
    
    <!-- message start -->
    <string name="message_copied_tag">Tag copied to clipboard</string>
    <string name="message_press_back">Press back once more to exit</string>
    <string name="message_copied_password">Password copied to clipboard</string>
    <string name="message_enterprise_error">WPA Enterprise is not supported</string>
    <string name="message_code_error">Error creating QR code</string>
    <string name="message_permission_denied">Permission is needed to save QR code</string>
    <string name="message_save_completed">Saved to:\n%1s</string>
    <string name="message_save_error">Error while saving file</string>
    <string name="message_copied">Copied successfully</string>
    <string name="message_root_error">Error</string>
    <string name="message_root_error_description">This app requires root to work</string>
    <!-- message end -->
    
    <!-- pref start -->
    <string name="pref_category_general">General</string>
    <string name="pref_exit_confirm_title">Exit confirmation</string>
    <string name="pref_exit_confirm_enabled">Confirm exit in main menu</string>
    <string name="pref_exit_confirm_disabled">Exit on back button press</string>
    <string name="pref_confirm_action_summary">Action to confirm exit</string>
    <string name="pref_confirm_action">Choose acton</string>
    <string name="pref_application_theme">Application theme</string>
    <string name="pref_ad_title">Show ads</string>
    <string name="pref_ad_enabled">Ads are enabled :)</string>
    <string name="pref_ad_disabled">Ads are disabled :(</string>
    <string name="pref_category_search">Search</string>
    <string name="pref_search_title">Search button</string>
    <string name="pref_search_enabled">Search button is displayed</string>
    <string name="pref_search_disabled">Search button not showing</string>
    <string name="pref_password_search_title">Password search</string>
    <string name="pref_password_search_enabled">Search passwords enabled</string>
    <string name="pref_password_search_disabled">Search passwords disabled</string>
    <string name="pref_category_security">Security</string>
    <string name="pref_passwords_security_title">Passwords security</string>
    <string name="pref_passwords_security_enabled">Show passwords in the list</string>
    <string name="pref_passwords_security_disabled">Hide passwords in the list</string>
    <!-- pref end -->
    
</resources>
