<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <PreferenceCategory
        android:title="@string/pref_category_general">
        
        <SwitchPreference
            android:defaultValue="true"
            android:key="back_pressed_enabled"
            android:summaryOff="@string/pref_exit_confirm_disabled"
            android:summaryOn="@string/pref_exit_confirm_enabled"
            android:title="@string/pref_exit_confirm_title"/>
        
        <ListPreference
            android:defaultValue="dialog"
            android:key="back_pressed_action"
            android:dependency="back_pressed_enabled"
            android:dialogTitle="@string/pref_confirm_action"
            android:entries="@array/back_entries"
            android:entryValues="@array/back_values"
            android:summary="@string/pref_confirm_action_summary"
            android:title="@string/pref_confirm_action"/>
        
        <ListPreference
            android:defaultValue="system"
            android:key="application_theme"
            android:dialogTitle="@string/pref_application_theme"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:title="@string/pref_application_theme"
            app:useSimpleSummaryProvider="true"/>
        
        <CheckBoxPreference
            android:key="ad_enabled"
            android:defaultValue="true"
            android:title="@string/pref_ad_title"
            android:summaryOn="@string/pref_ad_enabled"
            android:summaryOff="@string/pref_ad_disabled"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/pref_category_search">
        
        <SwitchPreference
            android:key="search_enabled"
            android:defaultValue="true"
            android:title="@string/pref_search_title"
            android:summaryOn="@string/pref_search_enabled"
            android:summaryOff="@string/pref_search_disabled"/>
        
        <CheckBoxPreference
            android:dependency="search_enabled"
            android:key="password_search_enabled"
            android:defaultValue="false"
            android:title="@string/pref_password_search_title"
            android:summaryOn="@string/pref_password_search_enabled"
            android:summaryOff="@string/pref_password_search_disabled"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/pref_category_security">
        
        <CheckBoxPreference
            android:key="show_passwords"
            android:defaultValue="true"
            android:title="@string/pref_passwords_security_title"
            android:summaryOn="@string/pref_passwords_security_enabled"
            android:summaryOff="@string/pref_passwords_security_disabled"/>
        
    </PreferenceCategory>
    
</PreferenceScreen>
