<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp">
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/dialogWifiCopy">
    
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/action_copy"
            android:scaleType="center"
            android:src="@drawable/ic_copy"
            app:tint="?colorControlNormal"/>
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_copy"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"/>
    
    </LinearLayout>
    
    <View
        android:background="?android:attr/dividerVertical"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"/>
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/dialogWifiCode">
    
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/action_code"
            android:scaleType="center"
            android:src="@drawable/ic_qr_code"
            app:tint="?colorControlNormal"/>
        
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/action_code"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"/>
    
    </LinearLayout>
    
    <View
        android:background="?android:attr/dividerVertical"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"/>
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/dialogWifiOpen">
    
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/action_info"
            android:scaleType="center"
            android:src="@drawable/ic_open"
            app:tint="?colorControlNormal"/>
        
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/action_info"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"/>
    
    </LinearLayout>
    
    <View
        android:background="?android:attr/dividerVertical"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"/>
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/dialogWifiShare">
    
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/action_share"
            android:scaleType="center"
            android:src="@drawable/ic_share"
            app:tint="?colorControlNormal"/>
        
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/action_share"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"/>
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        
        <Button
            style="?borderlessButtonStyle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/action_cancel"
            android:id="@+id/dialogWifiClose"/>
    
    </LinearLayout>

</LinearLayout>