<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.InfoActivity">
    
    <TextView
        android:id="@+id/info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textColor="?android:textColorPrimary"
        android:textSize="28sp"
        android:padding="12dp"
        tools:text="Name"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:listDivider"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <LinearLayout
            android:id="@+id/info_action_get_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_code"
                android:src="@drawable/ic_qr_code"
                app:tint="?colorSecondary"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?colorSecondary"
                android:textStyle="bold"
                android:text="@string/description_code"/>
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/info_action_copy_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_copy_all"
                android:src="@drawable/ic_copy"
                app:tint="?colorSecondary"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?colorSecondary"
                android:textStyle="bold"
                android:text="@string/description_copy_all"/>
            
        </LinearLayout>
        
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:listDivider"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp">
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            
            <TextView
                android:id="@+id/info_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                android:textIsSelectable="true"
                android:textSize="18sp"
                tools:text="Password"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorSecondary"
                android:text="@string/description_password"/>
            
        </LinearLayout>
        
        <ImageView
            style="?actionButtonStyle"
            android:id="@+id/info_action_copy_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="?colorControlNormal"
            android:contentDescription="@string/description_copy_password"
            android:src="@drawable/ic_copy"/>
        
    </LinearLayout>
    
</LinearLayout>